Revision history for Perl extension App::Sqitch

1.6.1  Not Yet Released
     - Fixed some ancient typos in sqitchtutorial-sqlite, with thanks to @ovid
       for the report!

1.6.0  2025-10-06T13:00:00Z
     - Refactored the parsing of arrays for engines that don't support arrays
       (e.g., SQLite & Firebird). A new method in DBIEngine, `_parse_array`,
       replaces inline uses of `split`. This allows the tests to more
       consistently compare arrays as arrays, though `search_events` must now
       always parse `tags`, `requires`, and `conflicts`.
     - Added support for ClickHouse. It relies on the `clickhouse` (or
       `clickhouse-client`) CLI and ODBC driver. Like MySQL, it uses a
       database for the registry schema, where the tables use the `MergeTree`
       engine. It supports client certificate authentication and the
       ClickHouse client configuration file format.

1.5.2  2025-04-29T15:13:35Z
     - Added missing German translations, thanks to @0xflotus for the PR
       (#873)!
     - Fixed bug where the location of reworked script files did not respect
       the `deploy_dir`, `revert_dir`, or `verify_dir` options. Thanks to Neil
       Freeman for the report (#875)!
     - Updated the MySQL engine's installation of the `checkit()` function so
       that it no longer depends on permission-checking, since the current
       user may not have such permission. It instead attempts to create the
       function and ignores a failure due to a lack of permission. Thanks to
       Alastair Douglas for the report and solution (#874)!
     - Added missing CockroachDB templates. Thanks to @Peterbyte for the
       report (#878)!
     - Removed support for the `SNOWSQL_PORT` environment variable, which has
       long been deprecated by Snowflake and likely never did anything.
     - Fixed the quoting of the role and schema names on connecting to
       Snowflake, which was silently failing and thus not properly using the