@@ -3,6 +3,10 @@ Revision history for Perl extension App::Sqitch
 1.6.1  Not Yet Released
      - Fixed some ancient typos in sqitchtutorial-sqlite, with thanks to @ovid
        for the report!
+     - Updated ClickHouse logic to always specify "default" as the hostname
+       when connecting and the URI includes not hostname. This ensures it
+       doesn't try to use `DSN=sqitch`, which is unlikely to be a configured
+       DSN, and to align with the behavior of the ClickHouse client.
 
 1.6.0  2025-10-06T13:00:00Z
      - Refactored the parsing of arrays for engines that don't support arrays
